peac_dev/force-app/main/default/objects/Opportunity_Attachment_HCL__c/Opportunity_Attachment_HCL__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Opportunity Attachment HCL</label>
</CustomObject>