peac_dev/force-app/main/default/objects/Opportunity_Attachment_HCL__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Password</label>
    <length>250</length>
    <type>Text</type>
</CustomField>