peac_dev/force-app/main/default/objects/Opportunity_Attachment_HCL__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Endpoint URL</inlineHelpText>
    <label>URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>