peac_dev/force-app/main/default/objects/Opportunity_Attachment_HCL__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>250</length>
    <type>Text</type>
</CustomField>