peac_dev/force-app/main/default/objects/Opportunity_Attachment_HCL__c/fields/x_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_api_key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>x-api-key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>